--- a/src/SlackConnector/SlackConnector.csproj
+++ b/src/SlackConnector/SlackConnector.csproj
@@ -2,17 +2,18 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <Id>SlackConnector_Demo</Id>
     <Version>1.0.1</Version>
     <AssemblyVersion>1.0.0.1</AssemblyVersion>
     <FileVersion>1.0.0.1</FileVersion>
     <PackageTags>Slack API SlackApi MargieBot SlackConnector noobot bot slackbot</PackageTags>
-    <Description>SlackConnector initiates an open connection between you and the Slack api servers. SlackConnector uses web-sockets to allow real-time messages to be received and handled within your application.</Description>
+    <Description>Demo version of SlackConnector initiates an open connection between you and the Slack api servers. SlackConnector uses web-sockets to allow real-time messages to be received and handled within your application.</Description>
     <Company>Workshop2</Company>
-    <RepositoryUrl>https://github.com/noobot/slackconnector</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/noobot/SlackConnector/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/ebrucucen/slackconnector</RepositoryUrl>
+    <PackageLicenseUrl>https://github.com/ebrucucen/SlackConnector/blob/master/LICENSE</PackageLicenseUrl>
     <Copyright />
     <Authors>Workshop2</Authors>
-    <PackageProjectUrl>https://github.com/noobot/slackconnector</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/ebrucucen/slackconnector</PackageProjectUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard1.5|AnyCPU'">
